timestamp & mission weight bugs
