# docs/swagger.yaml
@@ -306,23 +306,6 @@ paths:
       tags:
       - Admin
   /admin/missions/{uid}:
-    delete:
-      parameters:
-      - description: mission uid
-        in: path
-        name: uid
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handler.Response'
-      summary: delete mission
-      tags:
-      - Admin
     post:
       consumes:
       - multipart/form-data
@@ -403,7 +386,7 @@ paths:
                 data:
                   $ref: '#/definitions/helperModel.PublicUser'
               type: object
-      summary: user registration
+      summary: admin registration
       tags:
       - Admin
   /admin/reorganize:
